syntax = "proto3";

package ares.messaging.device;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

message DeviceConfig {
  google.protobuf.StringValue unique_id = 1;
  string device_name = 2;
  string device_type = 3;
  google.protobuf.Any config_data = 4;
}